--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,13 +9,11 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">8,244</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">5,033</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">httpMethods.HttpRequest</td><td><a href="#m0">crateUser</a></td><td rowspan="1">1675237430840</td><td rowspan="1">1367</td></tr><tr class="passedeven"><td><a href="#m1">deleteUser</a></td><td rowspan="1">1675237432872</td><td rowspan="1">665</td></tr><tr class="passedeven"><td><a href="#m2">getUsers</a></td><td rowspan="1">1675237425369</td><td rowspan="1">5445</td></tr><tr class="passedeven"><td><a href="#m3">updateUser</a></td><td rowspan="1">1675237432212</td><td rowspan="1">657</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">postRequstBody.UsingExternalJsonFile</td><td><a href="#m0">testDelete</a></td><td rowspan="1">1675250946497</td><td rowspan="1">85</td></tr><tr class="passedeven"><td><a href="#m1">testPostUsingExternalJsonFile</a></td><td rowspan="1">1675250941616</td><td rowspan="1">4865</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">httpMethods.HttpRequest#crateUser</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">httpMethods.HttpRequest#deleteUser</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">httpMethods.HttpRequest#getUsers</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">httpMethods.HttpRequest#updateUser</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">postRequstBody.UsingExternalJsonFile#testDelete</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">postRequstBody.UsingExternalJsonFile#testPostUsingExternalJsonFile</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
