--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\ganes\AppData\Local\Temp\testng-eclipse--649396832\testng-customsuite.xml</span>
+                    <span>C:\Users\ganes\AppData\Local\Temp\testng-eclipse-2110571340\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">4 methods,   4 passed</span>
+                    <span class="method-stats">2 methods,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,22 +104,12 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="httpMethods.HttpRequest" class="method navigator-link" hash-for-method="crateUser">crateUser</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="postRequstBody.UsingExternalJsonFile" class="method navigator-link" hash-for-method="testDelete">testDelete</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="httpMethods.HttpRequest" class="method navigator-link" hash-for-method="deleteUser">deleteUser</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="httpMethods.HttpRequest" class="method navigator-link" hash-for-method="getUsers">getUsers</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="httpMethods.HttpRequest" class="method navigator-link" hash-for-method="updateUser">updateUser</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="postRequstBody.UsingExternalJsonFile" class="method navigator-link" hash-for-method="testPostUsingExternalJsonFile">testPostUsingExternalJsonFile</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -137,35 +127,21 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">httpMethods.HttpRequest</span>
+              <span class="class-name">postRequstBody.UsingExternalJsonFile</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="crateUser">
-                  </a> <!-- crateUser -->
-                  <span class="method-name">crateUser</span>
+                  <a name="testDelete">
+                  </a> <!-- testDelete -->
+                  <span class="method-name">testDelete</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="deleteUser">
-                  </a> <!-- deleteUser -->
-                  <span class="method-name">deleteUser</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="getUsers">
-                  </a> <!-- getUsers -->
-                  <span class="method-name">getUsers</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="updateUser">
-                  </a> <!-- updateUser -->
-                  <span class="method-name">updateUser</span>
+                  <a name="testPostUsingExternalJsonFile">
+                  </a> <!-- testPostUsingExternalJsonFile -->
+                  <span class="method-name">testPostUsingExternalJsonFile</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -173,7 +149,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\ganes\AppData\Local\Temp\testng-eclipse--649396832\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\ganes\AppData\Local\Temp\testng-eclipse-2110571340\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -182,7 +158,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;httpMethods.HttpRequest&quot;/&gt;
+      &lt;class name=&quot;postRequstBody.UsingExternalJsonFile&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -222,28 +198,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(4);
+data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'getUsers')
-data.setCell(0, 2, 'httpMethods.HttpRequest')
-data.setCell(0, 3, 5445);
+data.setCell(0, 1, 'testPostUsingExternalJsonFile')
+data.setCell(0, 2, 'postRequstBody.UsingExternalJsonFile')
+data.setCell(0, 3, 4865);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'crateUser')
-data.setCell(1, 2, 'httpMethods.HttpRequest')
-data.setCell(1, 3, 1367);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'deleteUser')
-data.setCell(2, 2, 'httpMethods.HttpRequest')
-data.setCell(2, 3, 665);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'updateUser')
-data.setCell(3, 2, 'httpMethods.HttpRequest')
-data.setCell(3, 3, 657);
+data.setCell(1, 1, 'testDelete')
+data.setCell(1, 2, 'postRequstBody.UsingExternalJsonFile')
+data.setCell(1, 3, 85);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 8 seconds</span>
+              <span class="suite-total-time">Total running time: 4 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -269,22 +237,14 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">httpMethods.HttpRequest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">postRequstBody.UsingExternalJsonFile</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">getUsers</span>
+                <span class="method-name">testPostUsingExternalJsonFile</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">crateUser</span>
-                <span class="method-start">5471 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">updateUser</span>
-                <span class="method-start">6843 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">deleteUser</span>
-                <span class="method-start">7503 ms</span>
+                <span class="method-name">testDelete</span>
+                <span class="method-start">4881 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
