--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,12 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b479da">  <td>23/02/01 13:13:50</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HttpRequest.crateUser()[pri:2, instance:httpMethods.HttpRequest@470f1802]">crateUser</td> 
+<tr bgcolor="b479da">  <td>23/02/01 16:59:06</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UsingExternalJsonFile.testDelete()[pri:2, instance:postRequstBody.UsingExternalJsonFile@cd3fee8]">testDelete</td> 
   <td>main@640070680</td>   <td></td> </tr>
-<tr bgcolor="b479da">  <td>23/02/01 13:13:52</td>   <td>2032</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HttpRequest.deleteUser()[pri:4, instance:httpMethods.HttpRequest@470f1802]">deleteUser</td> 
-  <td>main@640070680</td>   <td></td> </tr>
-<tr bgcolor="b479da">  <td>23/02/01 13:13:45</td>   <td>-5472</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HttpRequest.getUsers()[pri:1, instance:httpMethods.HttpRequest@470f1802]">getUsers</td> 
-  <td>main@640070680</td>   <td></td> </tr>
-<tr bgcolor="b479da">  <td>23/02/01 13:13:52</td>   <td>1372</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HttpRequest.updateUser()[pri:3, instance:httpMethods.HttpRequest@470f1802]">updateUser</td> 
+<tr bgcolor="b479da">  <td>23/02/01 16:59:01</td>   <td>-4882</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UsingExternalJsonFile.testPostUsingExternalJsonFile()[pri:1, instance:postRequstBody.UsingExternalJsonFile@cd3fee8]">testPostUsingExternalJsonFile</td> 
   <td>main@640070680</td>   <td></td> </tr>
 </table>
