--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\ganes\AppData\Local\Temp\testng-eclipse--15026689\testng-customsuite.xml</span>
+                    <span>C:\Users\ganes\AppData\Local\Temp\testng-eclipse--1307828949\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -103,7 +103,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="validateResponseData.ParsingJsonResponseData" class="method navigator-link" hash-for-method="testJsonResponseBodyData">testJsonResponseBodyData</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="schemaValidation.XMLSchemaValidation" class="method navigator-link" hash-for-method="xmlSchemaValidation">xmlSchemaValidation</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -121,14 +121,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">validateResponseData.ParsingJsonResponseData</span>
+              <span class="class-name">schemaValidation.XMLSchemaValidation</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="testJsonResponseBodyData">
-                  </a> <!-- testJsonResponseBodyData -->
-                  <span class="method-name">testJsonResponseBodyData</span>
+                  <a name="xmlSchemaValidation">
+                  </a> <!-- xmlSchemaValidation -->
+                  <span class="method-name">xmlSchemaValidation</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -136,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\ganes\AppData\Local\Temp\testng-eclipse--15026689\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\ganes\AppData\Local\Temp\testng-eclipse--1307828949\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -145,7 +145,11 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;validateResponseData.ParsingJsonResponseData&quot;/&gt;
+      &lt;class name=&quot;schemaValidation.XMLSchemaValidation&quot;&gt;
+        &lt;methods&gt;
+          &lt;include name=&quot;xmlSchemaValidation&quot;/&gt;
+        &lt;/methods&gt;
+      &lt;/class&gt; &lt;!-- schemaValidation.XMLSchemaValidation --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -187,9 +191,9 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'testJsonResponseBodyData')
-data.setCell(0, 2, 'validateResponseData.ParsingJsonResponseData')
-data.setCell(0, 3, 3255);
+data.setCell(0, 1, 'xmlSchemaValidation')
+data.setCell(0, 2, 'schemaValidation.XMLSchemaValidation')
+data.setCell(0, 3, 3918);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
@@ -220,9 +224,9 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">validateResponseData.ParsingJsonResponseData</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">schemaValidation.XMLSchemaValidation</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">testJsonResponseBodyData</span>
+                <span class="method-name">xmlSchemaValidation</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
